[package]
name = "get-tl-mirror-status"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
hex = "0.4.3"
nom = "7.1.3"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.35.0", features = ["full"] }
xz = { version = "0.1.0", features = ["tokio"] }
